정렬및 jwt 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,8 @@ server:
   port: 8081
   # http://localhost:8081/oauth/authorize?client_id=TestClientId&response_type=code
   # http://localhost:8081/oauth/authorize?client_id=TestClientId&redirect_uri=http://localhost:8081/oauth2/callback&response_type=code&scope=read
+
+security:
+  oauth2:
+    jwt:
+      signkey: 123@#$
